[tool.poetry]
name = "papertty"
version = "0.1.6"
description = "Python module to render a TTY or VNC on e-ink"
authors = ["Jouko Strömmer <jouko.strommer@iki.fi>"]
readme = "README.md"
repository = "https://github.com/joukos/PaperTTY"
homepage = "https://github.com/joukos/PaperTTY"

[tool.poetry.dependencies]
click = "^7.1.2"
Pillow = "7.1.2"
python = "^3.5"
"RPi.GPIO" = "^0.7.0"
spidev = "^3.4"
vncdotool = "^1.0.0"

[tool.poetry.scripts]
papertty = "papertty:papertty.cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
